--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.22.3",
+    "lowdb": "^7.0.1",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
